# pyvrml97

./: .bzrignore  .gitignore  MANIFEST.in  README.rst  README.txt  appveyor.yml  download_appveyor.sh  license.txt  pyproject.toml  requirements.txt  setup.py  setupaccel.py  test-requirements.txt  tox.ini
.github/workflows/: build_and_publish.yml
accelerate/: MANIFEST.in  README.txt  pyproject.toml  setup.py
accelerate/src/: fieldaccel2.c  fieldaccel2.pyx  frustcullaccel.c  tmatrixaccel.c
accelerate/vrml_accelerate/: __init__.py
accellerate/: fieldaccel.c  tmatrixaccel.c
appveyor/: install.ps1
tests/: test_fieldtypes.py  test_nodepath.py  test_olist.py  test_tostring.py  test_transformmatrix.py
tests/fixtures/: exampleD.2.wrl  proto_is_simple.wrl
vrml/: __init__.py  _bytes.py  arrays.py  cache.py  copier.py  csscolors.py  event.py  field.py  fieldtypes.py  node.py  nodepath.py  olist.py  protofunctions.py  protonamespace.py  route.py  setup.py  weakkeydictfix.py  weaklist.py  weaktuple.py
vrml/accellerate/: frustcullaccel.c  setup.py
vrml/vrml200x/: parser.py
vrml/vrml97/: __init__.py  _transformmatrix.py  _transformmatrix_accel.py  basenamespaces.py  basenodes.py  linearise.py  nodepath.py  nodetypes.py  nurbs.py  parseprocessor.py  parser.py  scenegraph.py  script.py  shaders.py  transformmatrix.py
vrml_accelerate/: __init__.py  setup.py
vrml_accelerate/src/: fieldaccel2.c  fieldaccel2.pyx  frustcullaccel.c  frustcullaccel.pyx  tmatrixaccel.c  tmatrixaccel.pyx
