[build-system]
# PyVRML97 (the root package) is pure Python - no C extensions - so it needs
# nothing but setuptools to build. Cython/numpy build-deps live only in
# accelerate/pyproject.toml, where the extensions actually are. setuptools>=61
# is required to read the PEP 621 [project] table below.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVRML97"
dynamic = ["version"]
description = "VRML97 Scenegraph model for Python"
requires-python = ">=3.9"
readme = "README.rst"
license = { text = "BSD-style, see license.txt for details" }
authors = [
    { name = "Mike C. Fletcher", email = "mcfletch@vrplumber.com" },
]
dependencies = [
    "numpy",
    "PyDispatcher",
    "simpleparse",
]
keywords = [
    "VRML",
    "VRML97",
    "scenegraph",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "http://pyopengl.sourceforge.net/context/"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["vrml*"]

[tool.setuptools.dynamic]
version = { attr = "vrml.__version__" }
