[build-system]
requires = [
    "setuptools>=61.0",
    "Cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyVRML97-accelerate"
dynamic = ["version"]
description = "Scenegraph acceleration code for PyVRML97"
readme = "README.txt"
license = { text = "BSD-style, see license.txt for details" }
authors = [
    { name = "Mike C. Fletcher", email = "mcfletch@vrplumber.com" },
]
dependencies = [
    "numpy",
]
keywords = [
    "VRML",
    "VRML97",
    "scenegraph",
    "accelerate",
    "fields",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "http://pyopengl.sourceforge.net/context/"

[tool.setuptools]
packages = ["vrml_accelerate"]

[tool.setuptools.dynamic]
version = { attr = "vrml_accelerate.__version__" }
