[build-system]
requires = [
    "setuptools>=61.0",
    "Cython",
    # Build against the numpy 2.x headers only. numpy 2.0-built extensions are
    # backward-compatible with numpy >=1.19 at runtime, so the runtime dep below
    # stays unpinned. Never source-build numpy here (see PIP_ONLY_BINARY below).
    "numpy>=2",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyVRML97-accelerate"
dynamic = ["version"]
description = "Scenegraph acceleration code for PyVRML97"
requires-python = ">=3.9"
readme = "README.txt"
license = { text = "BSD-style, see license.txt for details" }
authors = [
    { name = "Mike C. Fletcher", email = "mcfletch@vrplumber.com" },
]
dependencies = [
    "numpy",
]
keywords = [
    "VRML",
    "VRML97",
    "scenegraph",
    "accelerate",
    "fields",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "http://pyopengl.sourceforge.net/context/"

[tool.cibuildwheel]
# Only build targets that have a numpy 2.x binary wheel available, so numpy is
# never compiled from source (which needs meson and fails in CI):
#   * cp36-cp38  - below the numpy 2.x floor (numpy 2.0 requires Python >=3.9);
#                  cp36 also can't be built at all (setuptools 59.6 vs the
#                  PEP 621 [project] table above needing setuptools>=61).
#   * *-win32 / *_i686 - numpy no longer ships 32-bit wheels.
skip = "cp36-* cp37-* cp38-* *-win32 *_i686"
# Belt-and-suspenders: if a target ever slips through, make pip fail fast with a
# clear "no binary wheel" error instead of trying to source-build numpy.
environment = { PIP_ONLY_BINARY = "numpy" }

[tool.setuptools]
packages = ["vrml_accelerate"]

[tool.setuptools.dynamic]
version = { attr = "vrml_accelerate.__version__" }
